UI: Fix dummy covering thumb after upload.

--- a/src/jquery.ui.plupload/css/jquery.ui.plupload.css
+++ b/src/jquery.ui.plupload/css/jquery.ui.plupload.css
@@ -118,7 +118,7 @@
 	background-color: #eee;
 }
 
-.plupload_thumb_loading .plupload_file_thumb {
+.plupload_thumb_loading {
 	background: #eee url(../img/loading.gif) center no-repeat;
 }
 
